# Marina_Donaire_embarcatech_HBr_2025

./: CMakeLists (7).txt  CMakeLists.txt  README.md  adc_to_celsius.c  adc_to_celsius.h  joy_proj.c  joystick (5).uf2  main.c  projeto1_int1404.uf2  projeto_int.c  temperatura.c  temperatura.uf2  temperatura_tu.uf2
drivers/: led_embutido.c
hal/: hal_led.c
include/: hal_led.h  led_embutido.h
